--- a/install
+++ b/install
@@ -2,6 +2,6 @@
 
 for folder in $(echo $STOW_FOLDERS | sed "s/,/ /g")
 do
-  stow -D $folder
-  stow  $folder
+  stow  --dotfiles -D $folder
+  stow  --dotfiles $folder
 done
